--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -13,8 +13,8 @@ permissions:
 
 jobs:
   generate-readme:
-  	runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest
+   
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -24,22 +24,17 @@ jobs:
         with:
           node-version: '16'
       - name: CreateFile
-        run: | -
-        node -e "
-        const fs = require('fs');
-        const { JSDOM } = require('jsdom');
-        
-        // Load index.html
-        const htmlContent = fs.readFileSync('index.html', 'utf-8');
-        const dom = new JSDOM(htmlContent);
-        
-        // Extract <title> and first <p> as description
-        const title = dom.window.document.querySelector('title')?.textContent || 'My Project';
-        const description = dom.window.document.querySelector('p')?.textContent || 'Description not available.';
-        
-        // Generate README content
-        const readmeContent = \`# \${title}\n\n\${description}\n\nThis README was generated automatically from index.html.\`;
-        
-        // Write to README.md
-        fs.writeFileSync('README.md', readmeContent);
-        "
+        run: |-  
+          node -e "
+          const fs = require('fs');
+          const { JSDOM } = require('jsdom');
+          // Load index.html
+          const htmlContent = fs.readFileSync('index.html', 'utf-8');
+          const dom = new JSDOM(htmlContent);
+          // Extract <title> and first <p> as description
+          const title = dom.window.document.querySelector('title')?.textContent || 'My Project';
+          const description = dom.window.document.querySelector('p')?.textContent || 'Description not available.';
+          // Generate README content
+          const readmeContent = \`# \${title}\n\n\${description}\n\nThis README was generated automatically from index.html.\`;
+          // Write to README.md
+          fs.writeFileSync('README.md', readmeContent);"
