--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -23,6 +23,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+      - name: Install dependencies
+        run: npm install jsdom
+      
       - name: CreateFile
         run: |-  
           node -e "
