--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -42,3 +42,11 @@ jobs:
           // Write to README.md
           fs.writeFileSync('README.md', readmeContent);
           "
+
+      - name: Commit changes
+        run: 
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "Auto-generate README from index.html"
+          git push
