--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -44,7 +44,7 @@ jobs:
           "
 
       - name: Commit changes
-        run: 
+        run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
