--- a/.github/workflows/changeTitle.yml
+++ b/.github/workflows/changeTitle.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "Your GitHub Username"
-          git config --global user.email "your-email@example.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add index.html
           git commit -m "Update page title to ${NEW_TITLE}"
           git push origin main
